--- a/rime-moetaigi/moetaigi.dict.yaml
+++ b/rime-moetaigi/moetaigi.dict.yaml
@@ -1,3 +1,12 @@
+# Rime dictionary
+# encoding: utf-8
+
+---
+name: moetaigi
+version: "0.1"
+sort: by_weight
+use_preset_vocabulary: false
+...
 太白粉	thài pe̍h hún
 太白酒	thài pe̍h tsiú
 太監	thài kàm
