--- a/rime-moetaigi/moetaigi.dict.yaml
+++ b/rime-moetaigi/moetaigi.dict.yaml
@@ -7,23 +7,67 @@ version: "0.1"
 sort: by_weight
 use_preset_vocabulary: false
 ...
-太白粉	thài pe̍h hún
-太白酒	thài pe̍h tsiú
-太監	thài kàm
-太空	thài khong
-夫	hu
-夫人	hu jîn
-夫君	hu kun
-夫妻	hu tshe
-夫婦	hu hū
-夭	iáu
-夭壽	iau siu
-夭壽仔	iáu siū á
-夭壽短命	iáu siū té miā
-夭折	iáu tsiat
-央	iang
-央三託四	iang sann thok sì
-央倩	iang tshiànn
-央教	iang kah
-夯	giâ
-夯枷	giâ kê
+包	pau1
+肉	bah4
+無	bo5
+鼻	phinn7
+麵	mi7
+麵包	mi7 pau1
+箸	ti7
+透	thau3
+軟	nng2
+你	li2
+來	lai5
+哥	ko1
+鵝	go5
+苦	khoo2
+看	khuann3
+雅	nga2
+魚	hi5
+錢	tsinn5
+日	jit8
+字	ji7
+七	tshit4
+飼	tshi7
+壽	siu7
+做	tso3
+熱	juah8
+乳	ju2
+草	tshau2
+洗	se2
+目	bak8
+教	ka3
+山	suann1
+福	hok4
+齁	honn1
+高	ko1
+矮	e2
+病	penn7
+病院	penn7 inn7
+乖	kuai1
+關	kuainn1
+跳	thiau3
+喓	iaunn1
+暗	am3
+毋	m7
+毋通	m7 thang1
+茂	om7
+音	im1
+變	pian3
+恩	un1
+港	kang2
+勇	iong2
+冰	ping1
+黃	ng5
+飯	png7
+光	kng1
+色	sik4
+時	si5
+院	inn7
+武	bu2
+張	tiunn1
+習	sip8
+
+
+
+
