--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 
-.ipynb_checkpoints
 rime-moetaigi/test.ipynb
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# ipython notebook
+.ipynb_checkpoints
