加了幾個增補單字

--- a/rime-moetaigi/moetaigi.extended.dict.yaml
+++ b/rime-moetaigi/moetaigi.extended.dict.yaml
@@ -64,4 +64,10 @@ use_preset_vocabulary: false
 ˊ	5
 ˫	7
 ˙	8
-桃園	tho5'hng5
+桃園	tho5 hng5
+萌	bing5
+萌典	bing5 tian2
+台灣	tai5 uan5
+臺灣	tai5 uan5
+台語	tai5 gi2
+臺語	tai5 gi2
