把小ㄎ替換成小ㄍ

--- a/rime-moetaigi/moetaigi.extended.dict.yaml
+++ b/rime-moetaigi/moetaigi.extended.dict.yaml
@@ -59,6 +59,7 @@ use_preset_vocabulary: false
 ˪	3
 ㆴ	p4
 ㆵ	t4
+ㆻ	k4
 ㆶ	k4
 ㆷ	h4
 ˊ	5
@@ -71,39 +72,39 @@ use_preset_vocabulary: false
 臺灣	tai5 uan5
 台語	tai5 gi2
 臺語	tai5 gi2
-阿魯米	a lu2 mih4
-阿摩尼亞	a1 moo2 ni2 a2
-阿斯匹林	a1 su2 phi2 lin2
-阿給	a2 geh4
+阿魯米	a lu2 mih4	
+阿摩尼亞	a1 moo2 ni2 a2	
+阿斯匹林	a1 su2 phi2 lin2	
+阿給	a2 geh4	
 阿莎力	at8 sa2 lih4
-巴士	ba2 suh4
-ㆠㄚㆶㄍㄨㆷ	bak4 kuh4
-ㆠㄧ˪ㄌㄨ˪	bi3 lu3
-ㆠㄨ ㄌㄚ˪ㆢㄧㄚ	bu1 la3 jia3
-瓦斯	ga2 suh4
-ㄏㄢˊㄉㆦ ˋㄌㄨㆷ	han5 too2 luh4
-引擎	ian5 jin2
-ㄧㄜ ˋㆠㄧㆷ	io2 bih4
-卡拉OK	kha1 la2 oo2 khe1
-看板	khang5 pang2
-ㄎㄧㄨˊㄎㆤ ˋ	khiu5 khe2
-ㄎㆲ˫ㄍㄨ ㄌㄧ ˋ	khong7 ku1 li2
-ㄌㄞ˪ㄉㄚㆷ	lai3 tah4
-ㄌㄧㄣ˪ㆣㆦ˪	lin3 goo3
-ㄌㆦ ㄌㄞ ˋㆠㄚ˪	loo1 lai2 ba3
-ㄇㆦ˪ㄉㄚ˪	moo3 ta3
-ㄋㆤ ㄍㄨㆵㄉㄞ ˋ	ne1 kut4 tai2
-歐巴桑	oo1 ba2 sang2
-歐吉桑	oo1 ji2 sang2
-烏輪	oo1 lian2
-烏肚䆀	oo1 too2 bai2
+巴士	ba2 suh4	
+ㆠㄚㆻㄍㄨㆷ	bak4 kuh4
+ㆠㄧ˪ㄌㄨ˪	bi3 lu3	
+ㆠㄨ ㄌㄚ˪ㆢㄧㄚ	bu1 la3 jia3	
+瓦斯	ga2 suh4	
+ㄏㄢˊㄉㆦ ˋㄌㄨㆷ	han5 too2 luh4	
+引擎	ian5 jin2	
+ㄧㄜ ˋㆠㄧㆷ	io2 bih4	
+卡拉OK	kha1 la2 oo2 khe1	
+看板	khang5 pang2	
+ㄎㄧㄨˊㄎㆤ ˋ	khiu5 khe2	
+ㄎㆲ˫ㄍㄨ ㄌㄧ ˋ	khong7 ku1 li2	
+ㄌㄞ˪ㄉㄚㆷ	lai3 tah4	
+ㄌㄧㄣ˪ㆣㆦ˪	lin3 goo3	
+ㄌㆦ ㄌㄞ ˋㆠㄚ˪	loo1 lai2 ba3	
+ㄇㆦ˪ㄉㄚ˪	moo3 ta3	
+ㄋㆤ ㄍㄨㆵㄉㄞ ˋ	ne1 kut4 tai2	
+歐巴桑	oo1 ba2 sang2	
+歐吉桑	oo1 ji2 sang2	
+烏輪	oo1 lian2	
+烏肚䆀	oo1 too2 bai2	
 柏青哥	pha1 tsin3 koo3
-沙西米	sa1 si2 mih4
-殺必死	sa5 bi3 su3
-塌塌米	tha1 tha2 mih4
-ㄊㄤ˪ㄙㄨ˪	thang3 su3
-ㄊㆦ ㄌㄚ ˋㄎㄨㆷ	thoo1 la2 khuh4
-ㄊㆦ ㄇㄚ ˋㄉㆦㆷ	thoo1 ma2 tooh4
-ㄨ ㄌㆲ ˋ	u1 long2
-哇沙米	ua1 sa2 bih
-運將	un3 tsiang3
+沙西米	sa1 si2 mih4	
+殺必死	sa5 bi3 su3	
+塌塌米	tha1 tha2 mih4	
+ㄊㄤ˪ㄙㄨ˪	thang3 su3	
+ㄊㆦ ㄌㄚ ˋㄎㄨㆷ	thoo1 la2 khuh4	
+ㄊㆦ ㄇㄚ ˋㄉㆦㆷ	thoo1 ma2 tooh4	
+ㄨ ㄌㆲ ˋ	u1 long2	
+哇沙米	ua1 sa2 bih	
+運將	un3 tsiang3	
