增加 tsuim.yaml 註解

--- a/rime-moetaigi/tsuim.yaml
+++ b/rime-moetaigi/tsuim.yaml
@@ -1,16 +1,18 @@
-# Rime spelling algebra rules for Tsuim
+# 台羅拼寫轉換成注音輸入之規則
 
+#### 對於需要兩個或更多拉丁字母來標註的注音，要把他們在字典檔 (.dict.yaml) 中的拼寫轉換成單字母，才能建立鍵盤對應表。
+#### 因為 RIME 會逐行執行以下步驟，所以這裡的順序很重要，例如轉換 ㄑ/ㄘ 的規則必須要放在 ㄐ/ㄗ 前面，才不會讓所有 ㄑ/ㄘ 變成 ㄐ/ㄗ。
 pinyin_to_tsuim:
   __append:
-    - xform/tsh(?=i)/C/      # ㄑ
+    - xform/tsh(?=i)/C/      # ㄑ -- tsh 後面接 i 時，tsh 為 ㄑ
     - xform/tsh/c/           # ㄘ
-    - xform/ts(?=i)/Z/       # ㄐ
+    - xform/ts(?=i)/Z/       # ㄐ -- ts 後面接 i 時，ts 為 ㄐ
     - xform/ts/z/            # ㄗ
     - xform/ph/P/            # ㄆ
     - xform/th/T/            # ㄊ
     - xform/kh/K/            # ㄎ
-    - xform/s(?=i)/S/        # ㄒ
-    - xform/j(?=i)/J/        # ㆢ
+    - xform/s(?=i)/S/        # ㄒ -- s 後面接 i 時，s 為 ㄒ
+    - xform/j(?=i)/J/        # ㆢ -- j 後面接 i 時，j 為 ㆢ
     - xform/ainn/Y/          # ㆮ
     - xform/aunn/X/          # ㆯ
     - xform/ann/A/           # ㆩ
@@ -20,54 +22,50 @@ pinyin_to_tsuim:
     - xform/unn/U/           # ㆫ
     - xform/ang/[/           # ㄤ
     - xform/ong/]/           # ㆲ
-    - xform/(?<=i)ng/R/      # ㄥ (1)
-    - xform/^ng11$/R1/       # ㄥ (2) 比對 "ng11"，打注音ㄥ專用
-    - xform/ng(?![1-9])/G/   # ㄫ
-    - xform/ng/r/            # ㆭ
+    - xform/(?<=i)ng/R/      # ㄥ (1) -- ng 前面是 i 的時候，ng 為 ㄥ
+    - xform/^ng11$/R1/       # ㄥ (2) -- 比對 "ng11" (注音ㄥ在 extended.dict.yaml 中有著特殊拼法 "ng11" 以避免衝突，此規則專門用來打注音ㄥ)
+    - xform/ng(?![1-9])/G/   # ㄫ -- ng 後面不接調號 (也就是說 ng 後面會有一個母音) 時，ng 為 ㄫ
+    - xform/ng/r/            # ㆭ -- 除了 ㄤ、ㆲ、ㄥ、ㄫ以外出現 ng 的情況
     - xform/ai/y/            # ㄞ
     - xform/au/x/            # ㄠ
     - xform/oo/O/            # ㆦ (1)
-    - xform/o(?=[kpt])/O/    # ㆦ (2) -oh 對應到 ㄜㆷ
+    - xform/o(?=[kpt])/O/    # ㆦ (2) -- o 後面接 k, p 或 t 時，o 為 ㆦ (注意 -oh 對應到 ㄜㆷ)
     - xform/am/{/            # ㆰ
     - xform/om/}/            # ㆱ
-    - xform/(?<=[eiu])m/M/   # ㆬ (1)
-    - xform/^m(?=[1-9])/M/   # ㆬ (2) 比對單 m 接聲調符號
+    - xform/(?<=[eiu])m/M/   # ㆬ (1) -- m 前面接 e, i 或 u 時，m 為ㆬ
+    - xform/^m(?=[1-9])/M/   # ㆬ (2) -- 比對單 m 接聲調符號
     - xform/an/0/            # ㄢ
-    - xform/(?<=[iu])n/N/    # ㄣ (1)
-    - xform/^n(?=[1-9])/N/   # ㄣ (2) 比對單 n 接聲調符號，打注音ㄣ專用
-    - xform/p4/91/           # ㆴ (1) + 一聲
-    - xform/p(?=8)/9/        # ㆴ (2)
-    - xform/t4/>1/           # ㆵ (1) + 一聲
+    - xform/(?<=[iu])n/N/    # ㄣ (1) -- n 前面接 i 或 u 時，n 為ㄣ
+    - xform/^n(?=[1-9])/N/   # ㄣ (2) -- 比對單 n 接聲調符號 (打注音ㄣ專用)
+    - xform/p4/91/           # ㆴ (1) -- 比對第四聲 (p4 轉換為 ㆴ+ 空白鍵)
+    - xform/p(?=8)/9/        # ㆴ (2) -- 比對第八聲 (p 轉換為 ㆴ，8 會在其他規則中轉換為輕聲鍵)
+    - xform/t4/>1/           # ㆵ (1) -- 以下規則請參考ㆴ的註解
     - xform/t(?=8)/>/        # ㆵ (2)
-    - xform/k4/<1/           # ㆻ (1) + 一聲
+    - xform/k4/<1/           # ㆻ (1) 
     - xform/k(?=8)/</        # ㆻ (2)
-    - xform/h4/41/           # ㆷ (1) + 一聲
+    - xform/h4/41/           # ㆷ (1) 
     - xform/h(?=8)/4/        # ㆷ (2)
 
-#free_order:
-#  __append:
-#    - derive/([bpmfdtnlgkhjqxZCSrzcs])([iuv])/$2$1/
-#    - derive/([iuv])([aoeEAIOUMNKGR])/$2$1/
-#    - derive/([bpmfdtnlgkhjqxZCSrzcs])([aoeEAIOUMNKGR])/$2$1/
-#    - derive/([bpmfdtnlgkhjqxZCSrzcs])([iuv])/$2$1/
-
+#### 簡化拼法表述式
+#### 這裡的規則描述在不使用完整的注音拼法下，什麼字會被搜尋到 (例如只打「ㄅ」的情況下輸出「ㄅㆭ˫」的候選字「飯」)
 abbreviation:
   __append:
     # ==== 免打聲調 ====
-    - abbrev/^(.+[49><])[18]$/$1/        # 四八聲免打輕聲分別 (1)
-    - abbrev/^(.+)[49><].$/$1/           # 四八聲免打聲調 (2)
-    - abbrev/^(.+)[12357]$/$1/           # 一二三五七聲免打聲調 (部分規則與 #1 重疊)
+    #### "49><" 對應的是四聲或八聲使用的 ㆷㆴㆵㆻ (見上方規則)
+    #### "12357" 對應的是其他五個聲調的調號 ((無調號) ˋ ˪ ˊ ˫)
+    - abbrev/^(.+[49><])[18]$/$1/        # 只要打 ㆷㆴㆵㆻ 就會搜尋到四聲與八聲的音 (1)
+    - abbrev/^(.+)[49><].$/$1/           # 只要打聲母與韻母，就會顯示四聲與八聲的音 (2)
+    - abbrev/^(.+)[12357]$/$1/           # 只要打聲母與韻母，就會顯示一二三五七聲的音 (部分規則與 #1 重疊)
     # ==== 免打注音 ====
-    - abbrev/^(.)(.)[12357]$/$1/         # 二部件一二三五七聲免打第二部件 (跟單部件四聲 #2 重複)
-    - abbrev/^(.)(.)(.)[12357]$/$1$2/    # 三部件一二三五七聲免打第三部件 (跟二部件四聲 #2 重複)
-    - abbrev/^(.)(.)(.)[12357]$/$1/      # 三部件一二三五七聲免打第二三部件 (3)
-    - abbrev/^(.)(.)[49><][18]$/$1/      # 二部件四八聲免打第二部件  (部分規則與 #3 重疊)
-    - abbrev/^(.)(.)(.)[49><][18]$/$1$2/ # 三部件四八聲免打第三部件
-    - abbrev/^(.)(.)(.)[49><][18]$/$1/   # 三部件四八聲免打第二三部件
+    - abbrev/^(.)(.)[12357]$/$1/         # 對於具有聲母 + 韻母拼法且為一二三五七聲的音，只要打聲母就能夠搜尋 (部分跟 #2 重疊) (3)
+    - abbrev/^(.)(.)(.)[12357]$/$1$2/    # 對於具有聲母 + 介音 + 韻母拼法且為一二三五七聲的音，只要打聲母 + 介音就能夠搜尋 (部分跟 #3 重疊)
+    - abbrev/^(.)(.)(.)[12357]$/$1/      # 對於具有聲母 + 介音 + 韻母拼法且為一二三五七聲的音，只要打聲母就能夠搜尋 (4)
+    - abbrev/^(.)(.)[49><][18]$/$1/      # 對於具有聲母 + 韻母拼法且為四或八聲的音，只要打聲母就能夠搜尋 (部分與 #4 重疊)
+    - abbrev/^(.)(.)(.)[49><][18]$/$1$2/ # 對於具有聲母 + 介音 + 韻母拼法且為四或八聲的音，只要打聲母 + 介音就能夠搜尋
+    - abbrev/^(.)(.)(.)[49><][18]$/$1/   # 對於具有聲母 + 介音 + 韻母拼法且為四或八聲的音，只要打聲母就能夠搜尋
 
-# To check regex:
-# https://regex101.com/
-# test strings:
+#### 以下標音可用來測試上面的 Regex 語法是否正確。
+#### 測試網站 https://regex101.com/
 # mi7
 # piR1
 # {7
@@ -79,10 +77,20 @@ abbreviation:
 # i<1
 # jua48
 
+#### 目前不實作倒置輸入的功能 (先打「ㆭ」再打「ㄅ」無法輸出「ㄅㆭ˫」的候選字「飯」)
+#free_order:
+#  __append:
+#    - derive/([bpmfdtnlgkhjqxZCSrzcs])([iuv])/$2$1/
+#    - derive/([iuv])([aoeEAIOUMNKGR])/$2$1/
+#    - derive/([bpmfdtnlgkhjqxZCSrzcs])([aoeEAIOUMNKGR])/$2$1/
+#    - derive/([bpmfdtnlgkhjqxZCSrzcs])([iuv])/$2$1/
+
+#### 單字母拼寫轉換成ㄅㄆㄇ對應的按鍵
 keymap_bopomofo:
   __append:
     - 'xlit|pbPmtTnlkgKGhZJCSzjcsaAOQoeEyYxX{}M0N[]RriIuU1239><4578|1!qa2wsxeEdDcrRfvyYhn8*iIkoO9(lL,<m0p;:/-uUjJ 43btgz657|'
 
+#### ㄅㄆㄇ對應的按鍵轉換成螢幕顯示的符號
 bopomofo_symbols:
   __append:
     - "xlit|1!qa2wsxeEdDcrRfvyYhn8*iIkoO9(lL,<m0p;:/-uUjJ 43btgz657|ㄅㆠㄆㄇㄉㄊㄋㄌㄍㆣㄎㄫㄏㄐㆢㄑㄒㄗㆡㄘㄙㄚㆩㆦㆧㄜㆤㆥㄞㆮㄠㆯㆰㆱㆬㄢㄣㄤㆲㄥㆭㄧㆪㄨㆫ ˋ˪ㆴㆵㆻㆷˊ˫˙|"
